[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/reticle.png" type="Texture" id=1]
[ext_resource path="res://Assets/gun_sprite.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/bolter_sprite/3.png" type="Texture" id=4]
[ext_resource path="res://Assets/bolter_sprite/0.png" type="Texture" id=5]
[ext_resource path="res://Assets/bolter_sprite/2.png" type="Texture" id=6]
[ext_resource path="res://Assets/bolter_sprite/4.png" type="Texture" id=7]
[ext_resource path="res://Assets/bolter_sprite/6.png" type="Texture" id=8]
[ext_resource path="res://Assets/bolter_sprite/7.png" type="Texture" id=9]
[ext_resource path="res://Assets/bolter_sprite/1.png" type="Texture" id=10]
[ext_resource path="res://Assets/bolter_sprite/5.png" type="Texture" id=11]
[ext_resource path="res://Assets/bolter_sprite/8.png" type="Texture" id=12]
[ext_resource path="res://Assets/bolter_sprite/9.png" type="Texture" id=13]
[ext_resource path="res://Assets/sound/bolter/fire/st_kinetic_2.ogg" type="AudioStream" id=14]
[ext_resource path="res://Assets/sound/bolter/fire/st_kinetic_3.ogg" type="AudioStream" id=15]
[ext_resource path="res://Assets/sound/bolter/fire/st_kinetic_1.ogg" type="AudioStream" id=16]
[ext_resource path="res://Assets/Iron Axe_1.png" type="Texture" id=17]
[ext_resource path="res://Assets/sound/corn/pickup.ogg" type="AudioStream" id=18]
[ext_resource path="res://Scripts/HitscanWeapon.gd" type="Script" id=19]
[ext_resource path="res://Scripts/ProjectileWeapon.gd" type="Script" id=20]
[ext_resource path="res://Scripts/MeleeWeapon.gd" type="Script" id=21]
[ext_resource path="res://Assets/shotgun/shotgun.png" type="Texture" id=22]

[sub_resource type="CapsuleShape" id=5]
radius = 1.75
height = 4.87489

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1.75, 0.18, 1.75 )

[sub_resource type="SphereShape" id=2]
radius = 4.33649

[sub_resource type="Animation" id=3]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/AxeSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 264, -48 ), Vector2( 300, -80 ), Vector2( 100, -160 ), Vector2( 264, -48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control/AxeSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, -90.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "shotgun fire"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/ShotgunSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 286, -24 ), Vector2( 290, 0 ), Vector2( 286, -24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control/ShotgunSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 35.0, 49.0, 35.0 ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "Shotgun Attack",
"speed": 100.0
} ]

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 61
script = ExtResource( 3 )

[node name="BodyCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -2.24744, 0 )
shape = SubResource( 5 )

[node name="FeetCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.33785, 0 )
shape = SubResource( 7 )

[node name="RotationHelper" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="RotationHelper"]
current = true
far = 2000.0

[node name="GunFirePoints" type="Spatial" parent="RotationHelper"]

[node name="HitscanPoint" type="Spatial" parent="RotationHelper/GunFirePoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.63673, 0.385 )
script = ExtResource( 19 )

[node name="RayCast" type="RayCast" parent="RotationHelper/GunFirePoints/HitscanPoint"]
enabled = true
cast_to = Vector3( 0, 0, -80 )
collision_mask = 5
collide_with_areas = true

[node name="ProjectilePoint" type="Spatial" parent="RotationHelper/GunFirePoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.111852, -0.238963, -1.06581 )
script = ExtResource( 20 )

[node name="MeleePoint" type="Spatial" parent="RotationHelper/GunFirePoints"]
script = ExtResource( 21 )

[node name="Area" type="Area" parent="RotationHelper/GunFirePoints/MeleePoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.986739, 0 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape" type="CollisionShape" parent="RotationHelper/GunFirePoints/MeleePoint/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.70287 )
shape = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="RotationHelper/GunFirePoints/MeleePoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.10484, 0 )
enabled = true
cast_to = Vector3( 0, 0, 8 )
collision_mask = 5
collide_with_areas = true

[node name="WeaponAimPoint" type="Spatial" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
"anims/axe swing" = SubResource( 3 )
"anims/shotgun fire" = SubResource( 6 )

[node name="MeleeTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundPlayers" type="Node" parent="."]

[node name="BolterFire1" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="BolterFire2" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 14 )
volume_db = -10.0

[node name="BolterFire3" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="ShotgunFire1" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="ShotgunFire2" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 14 )
volume_db = -10.0

[node name="ShotgunFire3" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="AxeSwing1" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="AxeSwing2" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 14 )
volume_db = -10.0

[node name="AxeSwing3" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="AxeHit1" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="DropPickup" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource( 18 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 208, -256 )
texture = ExtResource( 2 )
hframes = 4

[node name="AxeSprite" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 264, -48 )
scale = Vector2( 10, 10 )
texture = ExtResource( 17 )
hframes = 4

[node name="ShotgunSprite" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 286, -24 )
rotation = 0.610865
texture = ExtResource( 22 )
flip_h = true

[node name="BolterSprite" type="AnimatedSprite" parent="CanvasLayer/Control"]
position = Vector2( 0, -200 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "Shotgun Attack"

[node name="Reticule" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SomeHudThing" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="MeleeTimer" to="." method="_on_MeleeTimer_timeout"]
[connection signal="animation_finished" from="CanvasLayer/Control/BolterSprite" to="." method="_on_AnimatedSprite_animation_finished"]
